# GTAV-Classes

./: .gitignore  CAmmoInfo.h  CAutomobile.h  CAutomobile.hpp  CBaseModelInfo.hpp  CHandlingData.h  CHandlingData.hpp  CItemInfo.hpp  CMakeLists.txt  CNavigation.hpp  CNetGamePlayer.h  CNetGamePlayer.hpp  CNetworkPlayerMgr.hpp  CNonPhysicalPlayerData.hpp  CPed.h  CPed.hpp  CPedAppearanceDataNode.hpp  CPedFactory.h  CPedModelInfo.h  CPedModelInfo.hpp  CPedWeaponManager.h  CPedWeaponManager.hpp  CPlayerAppearanceDataNode.hpp  CPlayerInfo.h  CPlayerInfo.hpp  CTunables.hpp  CVehicleDrawHandler.h  CVehicleDrawHandler.hpp  CVehicleModelInfo.h  CVehicleModelInfo.hpp  CWeaponInfo.h  CWeaponInfo.hpp  CWheel.h  FriendInfo.hpp  FriendRegistry.hpp  HashTable.hpp  LICENSE  README.md  atSingleton.hpp  classes.cpp  (+9 more)
.devcontainer/: Dockerfile  devcontainer.json
base/: CBaseModelInfo.hpp  CNavigation.hpp  CObject.hpp  HashTable.hpp  atRTTI.hpp  datBase.hpp  fwArchetype.hpp  fwArchetypeDef.hpp  fwExtensibleBase.hpp  fwExtension.hpp  fwExtensionContainer.hpp  fwExtensionDef.hpp  fwFactoryBase.hpp  fwRefAwareBase.hpp  fwRefAwareBaseImpl.hpp  pgBase.hpp  pgDictionary.hpp  phArchetype.hpp  phArchetypeDamp.hpp  phBound.hpp  phBoundCapsule.hpp  phBoundCapsuleList.hpp  phBoundComposite.hpp
camera/: CCameraAngles.hpp  CCameraManagerAngles.hpp  CGameCameraAngles.hpp
datanodes/: CAutomobileCreationNode.hpp  CDoorCreationDataNode.hpp  CObjectCreationDataNode.hpp  CPedAppearanceDataNode.hpp  CPedAttachDataNode.hpp  CPedComponents.hpp  CPedScriptCreationDataNode.hpp  CPhysicalAttachDataNode.hpp  (+9 more)
(+280 files in other folders)
